<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".AddPerson">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtViewName_editor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewName_editor" />

        <EditText
            android:id="@+id/editTxtName_editor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:hint="@string/entrer_votre_nom"
            android:inputType="text"
            android:textColorHint="#757575"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewfirstname_editor" />

        <EditText
            android:id="@+id/editTxtPrenom_editor"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:hint="@string/entrer_votre_pr_nom"
            android:inputType="text"
            android:textColorHint="#757575"
            tools:ignore="LabelFor"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/btnValider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnValider"
        android:layout_gravity="center"/>
</LinearLayout>